Fix tables using the wrong color inside the result view

--- a/client/themeSwitcher.scss
+++ b/client/themeSwitcher.scss
@@ -1336,10 +1336,6 @@ $themes: (
       color: $item_text !important;
     }
 
-    .resultItem table {
-      background-color: $item_background !important;
-    }
-
     .resultItemHeader {
       color: $item_text !important;
     }
